; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/nvi/ex/extr_ex_init.c_ex_run_file.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/nvi/ex/extr_ex_init.c_ex_run_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@C_SOURCE = common dso_local global i32 0, align 4
@OOBLNO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @ex_run_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ex_run_file(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* @C_SOURCE, align 4
  %10 = load i32, i32* @OOBLNO, align 4
  %11 = load i32, i32* @OOBLNO, align 4
  %12 = call i32 @ex_cinit(i32* %8, i32* %5, i32 %9, i32 0, i32 %10, i32 %11, i32 0)
  %13 = load i32*, i32** %3, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = call i64 @strlen(i8* %15)
  %17 = add nsw i64 %16, 1
  %18 = load i32*, i32** %6, align 8
  %19 = load i64, i64* %7, align 8
  %20 = call i32 @CHAR2INT(i32* %13, i8* %14, i64 %17, i32* %18, i64 %19)
  %21 = load i32*, i32** %3, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = load i64, i64* %7, align 8
  %24 = sub i64 %23, 1
  %25 = call i32 @argv_exp0(i32* %21, i32* %5, i32* %22, i64 %24)
  %26 = load i32*, i32** %3, align 8
  %27 = call i32 @ex_source(i32* %26, i32* %5)
  ret i32 %27
}

declare dso_local i32 @ex_cinit(i32*, i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @CHAR2INT(i32*, i8*, i64, i32*, i64) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @argv_exp0(i32*, i32*, i32*, i64) #1

declare dso_local i32 @ex_source(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
